[gd_scene load_steps=36 format=3 uid="uid://dafm10j5kimf6"]

[ext_resource type="Script" path="res://Scripts/Start.gd" id="1_qeuec"]
[ext_resource type="FontFile" uid="uid://wdg2jnjqerh6" path="res://Assets/terror_pro.ttf" id="2_8pdpl"]
[ext_resource type="AudioStream" uid="uid://doea5rh44a7oq" path="res://Assets/intro.mp3" id="3_0cu66"]
[ext_resource type="Texture2D" uid="uid://dddxw2170eqsj" path="res://UI/homer-loading.png" id="3_av2kv"]
[ext_resource type="LabelSettings" uid="uid://xsmrb6djjam4" path="res://UI/leaderboard_title.tres" id="5_02x8p"]

[sub_resource type="LabelSettings" id="LabelSettings_grvns"]
font = ExtResource("2_8pdpl")
font_size = 96
font_color = Color(0.956863, 0, 0.270588, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dnqr"]
atlas = ExtResource("3_av2kv")
region = Rect2(0, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_butjv"]
atlas = ExtResource("3_av2kv")
region = Rect2(333, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2d2n"]
atlas = ExtResource("3_av2kv")
region = Rect2(666, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_buiwy"]
atlas = ExtResource("3_av2kv")
region = Rect2(999, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l1wb"]
atlas = ExtResource("3_av2kv")
region = Rect2(1332, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjwhe"]
atlas = ExtResource("3_av2kv")
region = Rect2(1665, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayje7"]
atlas = ExtResource("3_av2kv")
region = Rect2(1998, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1obf"]
atlas = ExtResource("3_av2kv")
region = Rect2(2331, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw2wq"]
atlas = ExtResource("3_av2kv")
region = Rect2(2664, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6x8n"]
atlas = ExtResource("3_av2kv")
region = Rect2(2997, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjoc6"]
atlas = ExtResource("3_av2kv")
region = Rect2(3330, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_df0ij"]
atlas = ExtResource("3_av2kv")
region = Rect2(3663, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmymd"]
atlas = ExtResource("3_av2kv")
region = Rect2(3996, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_eiye0"]
atlas = ExtResource("3_av2kv")
region = Rect2(4329, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikcj0"]
atlas = ExtResource("3_av2kv")
region = Rect2(4662, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_56dkq"]
atlas = ExtResource("3_av2kv")
region = Rect2(4995, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6okc"]
atlas = ExtResource("3_av2kv")
region = Rect2(5328, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvqb6"]
atlas = ExtResource("3_av2kv")
region = Rect2(5661, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8yim"]
atlas = ExtResource("3_av2kv")
region = Rect2(5994, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_85lqn"]
atlas = ExtResource("3_av2kv")
region = Rect2(6327, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc6ih"]
atlas = ExtResource("3_av2kv")
region = Rect2(6660, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_np7wr"]
atlas = ExtResource("3_av2kv")
region = Rect2(6993, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx2h6"]
atlas = ExtResource("3_av2kv")
region = Rect2(7326, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm604"]
atlas = ExtResource("3_av2kv")
region = Rect2(7659, 0, 333, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxwnl"]
atlas = ExtResource("3_av2kv")
region = Rect2(7992, 0, 333, 243)

[sub_resource type="SpriteFrames" id="SpriteFrames_xxmmo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dnqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_butjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2d2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buiwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l1wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjwhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayje7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1obf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw2wq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6x8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjoc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df0ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmymd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eiye0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikcj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56dkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6okc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvqb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8yim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85lqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc6ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_np7wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx2h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm604")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxwnl")
}],
"loop": true,
"name": &"Loading",
"speed": 25.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_mthgg"]
font = ExtResource("2_8pdpl")
font_size = 26

[sub_resource type="Theme" id="Theme_nchag"]
default_base_scale = 1.0
default_font = ExtResource("2_8pdpl")
default_font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_r8p5q"]
font = ExtResource("2_8pdpl")
font_size = 48

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qeuec")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0cu66")
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -38.0
offset_top = -18.0
offset_right = 6016.0
offset_bottom = 3457.0
color = Color(0.72549, 0.027451, 0.215686, 0.427451)

[node name="Play" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -255.0
offset_right = 238.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
text = "ZOMBZS"
label_settings = SubResource("LabelSettings_grvns")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="Play"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -64.0
offset_right = 142.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8pdpl")
theme_override_font_sizes/font_size = 48
text = "Play"

[node name="Controls" type="Button" parent="Play"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = 30.0
offset_right = 141.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8pdpl")
theme_override_font_sizes/font_size = 48
text = "Controls
"

[node name="HighScores" type="Button" parent="Play"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = 127.0
offset_right = 141.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8pdpl")
theme_override_font_sizes/font_size = 48
text = "High Scores
"

[node name="Quit" type="Button" parent="Play"]
visible = false
layout_mode = 0
offset_left = 483.0
offset_top = 396.0
offset_right = 683.0
offset_bottom = 466.0
theme_override_colors/font_color = Color(0.905882, 0, 0.207843, 1)
theme_override_fonts/font = ExtResource("2_8pdpl")
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="Control" type="Control" parent="Play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -94.0
offset_right = 11.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2

[node name="Loading" type="AnimatedSprite2D" parent="Play/Control"]
visible = false
position = Vector2(17, 163)
scale = Vector2(1.23663, 1.23663)
sprite_frames = SubResource("SpriteFrames_xxmmo")
animation = &"Loading"
frame_progress = 0.202099

[node name="Label2" type="Label" parent="Play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -153.0
offset_right = 92.5
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
text = "By Colby Gilbert"
label_settings = SubResource("LabelSettings_mthgg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controls" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -410.0
offset_top = -289.0
offset_right = 358.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207843, 0.12549, 0.14902, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -385.0
offset_top = -249.0
offset_right = 337.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_nchag")
text = "W, A, S, D : Movement
Mouse : Aim/Look
Space : Jump
Left-Click : Fire Weapon
Right-Click :  Sprint
R : Reload
E : Melee
Mouse Wheel Down or 1 : Previous Weapon
Mouse Wheel Up or 2 : Next Weapon"

[node name="Back" type="Button" parent="Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 219.0
offset_right = 90.0
offset_bottom = 289.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8pdpl")
theme_override_font_sizes/font_size = 48
text = "Back
"

[node name="HighScores" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="HighScores"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -322.0
offset_top = -299.0
offset_right = 322.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207843, 0.12549, 0.14902, 1)

[node name="High Scores" type="Label" parent="HighScores"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -284.0
offset_right = 127.5
offset_bottom = -226.0
grow_horizontal = 2
grow_vertical = 2
text = "High Scores"
label_settings = SubResource("LabelSettings_r8p5q")

[node name="ScrollContainer" type="ScrollContainer" parent="HighScores"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -216.0
offset_right = 263.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HighScores/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HighScores/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="NameTitle" type="Label" parent="HighScores/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"
label_settings = ExtResource("5_02x8p")

[node name="LvlTitle" type="Label" parent="HighScores/ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
text = "Lvl"
label_settings = ExtResource("5_02x8p")

[node name="PointsTitle" type="Label" parent="HighScores/ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8
text = "Points"
label_settings = ExtResource("5_02x8p")

[node name="Back" type="Button" parent="HighScores"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 218.0
offset_right = 125.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8pdpl")
theme_override_font_sizes/font_size = 48
text = "Back
"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Play/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Play/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Play/HighScores" to="." method="_on_high_scores_pressed"]
[connection signal="pressed" from="Play/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Controls/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HighScores/Back" to="." method="_on_back_pressed"]
